# loop-transversal-code

./: .gitignore  GLTC_presentation.py  README.md  app.py  greedy_syndrome_mapper.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
archive/: tools.py
docs/: index.html
src_cpp/: CMakeLists.txt  README.md
src_cpp/include/: greedy_syndrome_mapper.hpp
src_cpp/src/: greedy_syndrome_mapper.cpp  main.cpp
tests/: test_greedy_syndrome_mapper.py
